# cdx-clinical-reporter

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: manifest.yaml
docs/: architecture.md  what-is-out-of-scope.md
docs/release-notes/: v0.1.md
scripts/: run_lab.sh
src/cdxreport/: __init__.py  canary.py  compliance.py  pipeline.py  report.py  vendors.py
tests/: test_canary.py  test_compliance.py  test_pipeline.py  test_report.py  test_vendors.py
tests/fixtures/: canary.json
